# giga-drill-breaker

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: mcp-review.md  mcp-usage.md  pch-sdk-mismatch.md  toolchain-portability.md
examples/adl_fallback/: Core.hpp  Extension.hpp  Logic.hpp  order_a.cpp  order_b.cpp
examples/adl_same_score/: Core.hpp  Extension.hpp  order_a.cpp  order_b.cpp
examples/builder_to_struct/: expected.cpp  input.cpp
examples/ctad_fallback/: Container.hpp  Factory.hpp  Guide.hpp  order_a.cpp  order_b.cpp
examples/dead_code/: api.cpp  api.hpp  callbacks.cpp  callbacks.hpp  expected_liveness.json  internal.cpp  internal.hpp  main.cpp  shapes.cpp  shapes.hpp
examples/deep_chains/: README.md  async_workers.cpp  async_workers.hpp  callbacks.cpp  callbacks.hpp  expected_chains.json  gen_compile_commands.sh  lambda_callbacks.cpp  lambda_callbacks.hpp  main.cpp  pipeline.cpp  pipeline.hpp  plugins.cpp  plugins.hpp  scheduler.cpp  scheduler.hpp  stage1_ingest.cpp  stage1_ingest.hpp  stage2_parse.cpp  stage2_parse.hpp  stage3_transform.cpp  stage3_transform.hpp  stage4_dispatch.cpp  stage4_dispatch.hpp  stage5_sink.cpp  stage5_sink.hpp  tokenizer.cpp  tokenizer.hpp  workers.cpp  workers.hpp
examples/exception_context/: main.cpp
examples/macro_split/: expected.cpp  input.cpp
include/giga_drill/: Analyzer.h  GlobalIndex.h  Indexer.h  TransformPipeline.h
include/giga_drill/callgraph/: CallGraph.h  CallGraphBuilder.h  CollapseFilter.h  ControlFlowIndex.h  ControlFlowOracle.h  StringInterner.h
include/giga_drill/compat/: ClangVersion.h  PchCache.h  ToolAdjusters.h
include/giga_drill/lagann/: MatcherEngine.h  RulesParser.h  TemplateEngine.h  TransformPipeline.h
include/giga_drill/mcp/: McpProtocol.h  McpServer.h  McpTools.h
include/giga_drill/mugann/: Analyzer.h  DeadCodeAnalyzer.h  GlobalIndex.h  Indexer.h  TypeNormalize.h
scripts/: lagann-batch.sh  mcp-smoke.py
src/: Analyzer.cpp  CMakeLists.txt  GlobalIndex.cpp  Indexer.cpp  MatcherEngine.cpp  TransformPipeline.cpp  main.cpp
src/callgraph/: CallGraph.cpp  CallGraphBuilder.cpp  CollapseFilter.cpp  ControlFlowContextVisitor.cpp  ControlFlowIndex.cpp  ControlFlowOracle.cpp
src/compat/: PchCache.cpp
src/lagann/: MatcherEngine.cpp  RulesParser.cpp  TemplateEngine.cpp  TransformPipeline.cpp
src/mcp/: McpProtocol.cpp  McpServer.cpp  McpTools.cpp
src/mugann/: Analyzer.cpp  DeadCodeAnalyzer.cpp  GlobalIndex.cpp  Indexer.cpp
tests/: CMakeLists.txt  test_adl_ctad.cpp  test_control_flow.cpp  test_coverage_diag.cpp  test_dead_code.cpp  test_deep_chains.cpp  test_matcher_engine.cpp  test_mcp.cpp  test_rules_parser.cpp  test_transforms.cpp
